<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModelxml"
            type="com.example.shoestore.models.ShoeViewModel" />

        <variable
            name="fragment"
            type="com.example.shoestore.NewShoeDetailFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".NewShoeDetailFragment">


        <EditText
            android:id="@+id/shoeName_editText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_login"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="12dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ShoeCompany_editText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:autofillHints="no"
            android:background="@drawable/button_login"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/company"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/size_et"
            app:layout_constraintEnd_toEndOf="@+id/shoeName_editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/shoeName_editText"
            app:layout_constraintTop_toBottomOf="@+id/shoeName_editText" />

        <EditText
            android:id="@+id/size_et"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_login"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/size"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="12dp"
            app:layout_constraintBottom_toTopOf="@+id/description_et"
            app:layout_constraintEnd_toEndOf="@+id/ShoeCompany_editText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/ShoeCompany_editText"
            app:layout_constraintTop_toBottomOf="@+id/ShoeCompany_editText" />

        <EditText
            android:id="@+id/description_et"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_login"
            android:backgroundTint="@color/white"
            android:ems="10"

            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="12dp"

            android:paddingTop="8dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="@+id/size_et"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/size_et"
            app:layout_constraintTop_toBottomOf="@+id/size_et" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/shoe_name"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/shoeName_editText"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/ShoeCompany_editText"
            app:layout_constraintStart_toStartOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/size_et"
            app:layout_constraintStart_toStartOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/description_et"
            app:layout_constraintStart_toStartOf="@+id/textView7" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="124dp"
            android:background="@drawable/button_login"
            android:backgroundTint="@color/black"
            android:onClick="@{() -> fragment.back()}"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_login"
            android:backgroundTint="@color/darkBlueColor"
            android:onClick="@{()->fragment.setData()}"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>