<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/background_item"
        android:padding="8dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/name_"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:paddingStart="8dp"
            android:text="@string/company_"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/name"
            app:layout_constraintHorizontal_bias="0.454"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingEnd="16dp"
            android:text="@string/size_"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/company"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="@+id/company"
            app:layout_constraintTop_toBottomOf="@+id/company" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/description_"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/size"
            app:layout_constraintTop_toBottomOf="@+id/size" />

        <TextView
            android:id="@+id/name_edited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:padding="8dp"
            android:paddingTop="8dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/name"
            app:layout_constraintStart_toEndOf="@+id/name"
            tools:text="Air Jordon" />

        <TextView
            android:id="@+id/company_editedtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:padding="8dp"
            android:paddingTop="8dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/company"
            app:layout_constraintStart_toEndOf="@+id/company"
            tools:text="Nike" />

        <TextView
            android:id="@+id/size_editedtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:padding="8dp"
            android:paddingTop="8dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/size"
            app:layout_constraintStart_toEndOf="@+id/size"
            tools:text="30" />

        <TextView
            android:id="@+id/description_editedtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:paddingTop="8dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toEndOf="@+id/description"
            tools:text="sports sneaker" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="192dp"
            android:layout_height="198dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/jordon" />

        <!--        <View-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="1dp"-->
        <!--            android:layout_marginTop="8dp"-->
        <!--            android:background="@color/white"-->
        <!--            android:backgroundTint="@color/white"-->
        <!--            app:layout_constraintBottom_toBottomOf="@id/description_editedtext"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            tools:layout_editor_absoluteX="0dp"-->
        <!--            tools:layout_editor_absoluteY="92dp" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>